--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
 Revision history for Perl extension Math::Prime::Util.
 
-0.01  3 June 2012
-    - Original release
+0.01  4 June 2012
+    - Initial release
