--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Perl extension Math::Prime::Util.
 
-0.02  4 June 2012
+0.03  6 June 2012
+    - Speed up factoring a little by moving some work into the XS routine.
+
+0.02  5 June 2012
     - Back off new_ok to new/isa_ok to keep Test::More requirements low.
     - Some documentation updates.
     - I accidently used long in SQUFOF, which breaks LLP64.
