--- a/TODO
+++ b/TODO
@@ -21,6 +21,6 @@
 
 - speed up random_prime for large numbers
 
-- Add other bases to pseudoprime test
-
 - test x64 asm if Perl is built for 32-bit
+
+- Clean up prime_count ranges.  Write tests.
