--- a/TODO
+++ b/TODO
@@ -24,3 +24,6 @@
      1) mutex  (holy slowdown, batman)
      2) use one cache, and malloc/free if the cache isn't available.
   For sieve I think we'll need a counting semaphore.
+
+- Move .c / .h files into separate directory.
+  version does it in a painful way.  Something simpler to be had?
