--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Math::Prime::Util.
 
+0.07  17 June 2012
+    - Fixed a bug in next_prime found by Lou Godio (thank you VERY much!).
+      Added more tests for this.  This had been changed in another area but
+      hadn't been brought into next_prime.
+
 0.06  14 June 2012
     - Change to New/Safefree from malloc.  Oops.
 
