--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 Revision history for Perl extension Math::Prime::Util.
 
 0.08  20 June 2012
-    - Added thread scaffolding.
+    - Added thread safety, though with poor concurrency.
     - Accuracy improvement and measurements for math functions.
     - Remove simple sieve -- it wasn't being used, and was just around for
       performance comparisons.
