--- a/Changes
+++ b/Changes
@@ -9,6 +9,9 @@ Revision history for Perl extension Math::Prime::Util.
       memory, meaning we can skip the 7, 11, and 13 loops.  ~15% speedup.
     - Add all_factors function and added tests to t/50-factoring.t.
     - Add tied array module Math::Prime::Util::PrimeArray.
+    - 5.6.2 64-bit now disables the 64-bit factoring tests instead of failing
+      the module.  The main issue is that we can't verify the factors since Perl
+      can't properly multiply them.
 
 0.07  17 June 2012
     - Fixed a bug in next_prime found by Lou Godio (thank you VERY much!).
