--- a/Changes
+++ b/Changes
@@ -4,6 +4,10 @@ Revision history for Perl extension Math::Prime::Util.
     - Make miller_rabin return 0 if given even number.
     - Add tests for PP.
     - Cleanup of some tests.
+    - The XS miller_rabin code now works with large base > n.
+    - Moved prime_count_* and nth_prime_* into Util.pm.  This lets them
+      work with big numbers.
+    - factor and all_factor should correctly work with bigints.
 
 0.09  25 June 2012
     - Pure Perl code added.  Passes all tests.  Used only if the XSLoader
