--- a/TODO
+++ b/TODO
@@ -25,12 +25,8 @@
 - Move .c / .h files into separate directory.
   version does it in a painful way.  Something simpler to be had?
 
-- In PP nth_prime* and prime_count*, turn on bignum if bigint is on.
-
-- Add euler_phi documentation
-
 - More testing for bignum, including a test suite file
 
-- Move the approx / bounds functions into main, to support bignum properly.
-
 - need next_prime and prev_prime bignum support.  random_ndigit_prime needs it.
+
+- redo _XS_factor to return a sorted array
