--- a/TODO
+++ b/TODO
@@ -20,21 +20,25 @@
 
 - Faster SQUFOF
 
-- better prime count upper/lower bounds
+- better prime count upper/lower bounds (under RH for 64-bit).
 
 - Move .c / .h files into separate directory.
   version does it in a painful way.  Something simpler to be had?
 
-- More testing for bignum, including a test suite file
+- finish test suite for bignum.  Work on making it faster.
 
 - need next_prime and prev_prime bignum support.  random_ndigit_prime needs it.
-
-- redo _XS_factor to return a sorted array
 
 - Need to add more bignum factoring support:
    - GMP prho
    - GMP pminus1
+   - GMP SQUFOF
    - GMP tinyqs
-  That should at least make us usable for 80-90 bit numbers.
+  The first three should give us reasonable support up to ~30 digits.  Adding
+  a tinyQS (e.g. yafu, msieve, flint) would both be faster and extend to ~40
+  digits (in a reasonable time).  Going beyong that is going to need full
+  MPQS or SIQS.  Another possibility is to see if the GMP-ECM library is
+  installed and call that, but I'm not sure how much it will help if we get
+  the above running.
 
 - Must add BPSW if we want is_prime to be meaningful for >64-bit.
