--- a/TODO
+++ b/TODO
@@ -13,11 +13,6 @@
 
 - Is the current PP.pm setup the way we want to do it?
 
-- input validation (in XS, or do we need to make Perl wrappers for everything?)
-  We can do input val in XS by looking at the NV.  But I think long term we'll
-  have a little Perl front end for everything to route to bignum routines or
-  regular routines.
-
 - Faster SQUFOF
 
 - better prime count upper/lower bounds (under RH for 64-bit).
@@ -26,8 +21,6 @@
   version does it in a painful way.  Something simpler to be had?
 
 - finish test suite for bignum.  Work on making it faster.
-
-- need next_prime and prev_prime bignum support.  random_ndigit_prime needs it.
 
 - Need to add more bignum factoring support:
    - GMP prho
@@ -43,4 +36,8 @@
 
 - Tune the Lucas sequence code, especially try using more BigInt features.
 
-- Add tests for strong lucas pseudoprime, perhaps export the function
+- Add tests for strong lucas pseudoprime
+
+- Speedup random_prime.
+
+- Add random maurer prime.
