--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Math::Prime::Util.
 
+0.12  30 July 2012
+    - Add RiemannZeta function.  We used this before for Riemann R, but now
+      it is exported and should be accurate for small numbers (it was only
+      used for integers > 40 before).
+
 0.11  23 July 2012
     - Turn of threading tests on Cygwin, as threads on some Cygwin platforms
       give random panics (my Win7 64-bit works fine, XP 32-bit does not).
