--- a/TODO
+++ b/TODO
@@ -34,3 +34,8 @@
 - Add Lehmer in PP (I have a version, just needs some polishing).
 
 - Move AKS tests into their own test, and add some provable prime tests.
+
+- For bignums, RiemannZeta and RiemmannR are slow and give questionable
+  precision.  We should be able to do better.  One problem is the accuracy
+  bug in Math::BigFloat.  Perhaps check for Math::MPFR installed and use it?
+  Alternately write real-number pow function using GMP.
